--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,4 +5,4 @@ sitemap: false
 permalink: /404.html
 ---
 
-Sorry, but the page you were trying to view does not exist.
+Error 404: Sigh, Looks like this page took a day off ...
