Test new fix for new windows ext. links

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,4 +5,6 @@ sitemap: false
 permalink: /404.html
 ---
 
+{% include new-window-fix.html %}
+
 Error 404: Sigh, Looks like this page took a day off ...
